--- a/revit-api-csharp.csproj
+++ b/revit-api-csharp.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateWall.cs" />
     <Compile Include="PlaceFamily.cs" />
     <Compile Include="DeleteElement.cs" />
     <Compile Include="CollectWindows.cs" />
